started with 1024 errors, worked down to 557 errors. (467/1024 : 46%)